Comment reactive security